<resources>
    <!-- Application Name -->
    <string name="app_name">Otaku App!</string>
    <!-- URL -->
    <string name="baseURL">https://kitsu.io/api/edge/</string>
    <string name="image_url_manga">https://media.kitsu.io/manga/poster_images/</string>
    <string name="jpg_original">/original.jpg</string>
    <string name="jpg_large">/large.jpg</string>
    <string name="image_url_anime">https://media.kitsu.io/anime/poster_images/</string>
    <string name="youtubeURLIntern">https://www.youtube.com/watch?v=</string>
    <string name="youtubeURLExtern">https://youtu.be/</string>
    <!-- Toast Message -->
    <string name="onRespone">"onResponse: "</string>
    <string name="onFailure">"onFailure: "</string>
    <string name="FutureFavorites">"Coming soon!"</string>
    <!-- Keys -->
    <string name="Id">Id</string>
    <string name="Synopsis">Synopsis</string>
    <string name="CanonicalTitle">CanonicalTitle</string>
    <string name="StartDate">"Start Date"</string>
    <string name="EndDate">"End Date"</string>
    <string name="Status">"Status"</string>
    <string name="ChapterCount">ChapterCount</string>
    <string name="VolumeCount">VolumeCount</string>
    <string name="Serialization">"Serialization"</string>
    <string name="Option">Option</string>
    <string name="EpisodeCount">EpisodeCount</string>
    <string name="YoutubeVideoId">YoutubeVideoId</string>
    <string name="Type">Type</string>
    <string name="PosterImage">PosterImage</string>
    <!-- TextView Information -->
    <string name="tvStartDate">"Start Date: "</string>
    <string name="tvEndDate">"End Date: "</string>
    <string name="tvStatus">"Status: "</string>
    <string name="tvChapterCount">"ChapterCount: "</string>
    <string name="tvVolumeCount">"VolumeCount: "</string>
    <string name="tvSerialization">"Serialization: "</string>
    <string name="tvEpisodeCount">"Episode Count: "</string>
    <string name="tvYoutubeID">"Youtube Video Id: "</string>
    <!-- Others -->
    <string name="Manga">Manga</string>
    <string name="Anime">Anime</string>
    <string name="Favorites">Favorites</string>
    <string name="contentDescription">Manga Cover</string>
    <string name="contentDescriptionYoutube">Youtube Icon</string>
    <string name="Unknown">Unknown</string>
    <string name="Search">Search</string>
    <!-- Debug -->
    <string name="TAG">MANGA</string>
</resources>