<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_phone"
    tools:context=".activity.MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCanonicalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/CanonicalTitle"
                android:textColor="#CACFD2"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/poster"
                android:layout_width="145dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/contentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/StartDate"
                    android:textColor="#CACFD2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/EndDate"
                    android:textColor="#CACFD2"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Status"
                android:textColor="#CACFD2"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvExtra1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ChapterCount"
                    android:textColor="#CACFD2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvExtra2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/VolumeCount"
                    android:textColor="#CACFD2"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSerialization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Serialization"
                android:textColor="#CACFD2"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibYoutubeNative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@mipmap/ic_youtube"
                android:contentDescription="@string/contentDescriptionYoutube"/>

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/Synopsis"
                android:textColor="#CACFD2"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>