<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity4">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/ivManga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@null"
                    android:contentDescription="@string/contentDescription"
                    android:onClick="onClick"
                    app:srcCompat="@mipmap/ic_manga" />

                <TextView
                    android:id="@+id/tvManga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:text="@string/Manga"
                    android:textSize="25sp"

                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">


                <ImageButton
                    android:id="@+id/ivAnime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@null"
                    android:contentDescription="@string/contentDescription"
                    android:onClick="onClick"
                    app:srcCompat="@mipmap/ic_anime" />

                <TextView
                    android:id="@+id/tvAnime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:text="@string/Anime"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@null"
                    android:contentDescription="@string/contentDescription"
                    android:onClick="onClick"
                    app:srcCompat="@mipmap/ic_favorites" />


                <TextView
                    android:id="@+id/tvFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:text="@string/Favorites"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>